feat: роуты users, cards

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/vsgofman/movies-explorer-api#readme",
   "dependencies": {
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "validator": "^13.9.0"
