--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
+    "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "validator": "^13.9.0",
