--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
